// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match the snapshot for ExpensesSummary with filter variation 1 1`] = `
<div>
  <h1>
    Viewing 
    3
     expense totalling 
    $1,141.95
  </h1>
</div>
`;

exports[`should match the snapshot for ExpensesSummary with filter variation 2 1`] = `
<div>
  <h1>
    Viewing 
    1
     expense totalling 
    $1,095.00
  </h1>
</div>
`;

exports[`should match the snapshot for ExpensesSummary with filter variation 3 1`] = `<div />`;
